adjusted footer icon sizes and margin to avoid wrapping on smaller screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -363,11 +363,8 @@ footer ul {
 }
 
 .social-media i {
-  font-size: 2rem;
-  letter-spacing: 0px;
-  padding-left: 45px;
-  padding-right: 45px;
-  margin: 1%;
+  font-size: 1.8rem;
+  margin: 1rem;
   text-decoration: none;
   color: #272727;
   bottom: 10px;
